--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
 /* Portrait Container */
 .portrait {
   position: relative;
-  width: 380px;
-  height: 380px;
-  margin: 0;
+  width: 90%;          /* flexible size */
+  max-width: 300px;    /* limit size on mobile */
+  aspect-ratio: 1/1;   /* keep circle */
+  margin: auto;
   border-radius: 50%;
   overflow: hidden;
   display: flex;
@@ -106,13 +107,46 @@
   z-index: 2;
 }
 
-/* Portrait Image (Logo) */
+/* Portrait Image */
 .portrait img {
   width: 100%;
   height: 100%;
-  object-fit: cover;      
-  border-radius: 50%;     
+  object-fit: cover;
+  border-radius: 50%;
 }
+
+/* Logo / Moon Background */
+.moon {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 90%;
+  max-width: 300px;
+  aspect-ratio: 1/1;
+  border-radius: 50%;
+  background: url("Logo.jpg") no-repeat center center/cover;
+  z-index: 1;
+  box-shadow: 0 20px 40px rgba(200, 10, 10, 0.2) inset;
+}
+
+/* Responsive tweaks */
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;   /* stack logo and text vertically */
+    text-align: center;
+  }
+
+  .left, .right {
+    width: 100%;
+  }
+
+  nav ul {
+    flex-wrap: wrap;          /* so navbar doesn’t overflow */
+    justify-content: center;
+  }
+}
+
 
 /* Red moon turned into image background */
 .moon {
