--- a/index.html
+++ b/index.html
@@ -2,13 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rg_Dev's Custom Profile</title>
 
   <!-- Google Fonts (change if you want) -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 
   <style>
+    /* ===============================
+   GLOBAL RESPONSIVENESS
+================================= */
+
+/* Make all images responsive */
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* Container setup */
+.container {
+  display: flex;
+  flex-wrap: wrap; /* allows items to drop below each other on small screens */
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+/* Left (logo/portrait) and right (text) columns */
+.left, .right {
+  flex: 1;
+  min-width: 280px;   /* ensures it never shrinks too much */
+  max-width: 600px;   /* keeps things readable */
+  text-align: center;
+}
+
+/* Typography scaling */
+h1, h2, h3, p {
+  word-wrap: break-word;
+  line-height: 1.4;
+}
+
+/* Navbar */
+nav ul {
+  display: flex;
+  flex-wrap: wrap; /* prevent overflow */
+  justify-content: center;
+  gap: 12px;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+nav ul li a {
+  padding: 8px 14px;
+  display: block;
+}
+
+/* ===============================
+   MEDIA QUERIES
+================================= */
+
+/* Tablets */
+@media (max-width: 1024px) {
+  .container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .portrait {
+    max-width: 250px;
+  }
+}
+
+/* Mobile phones */
+@media (max-width: 600px) {
+  h1 {
+    font-size: 1.6rem;
+  }
+
+  p {
+    font-size: 1rem;
+  }
+
+  .portrait, .moon {
+    max-width: 200px;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 8px;
+  }
+}
+
     :root{
       --bg:#0b0b0b;
       --card:#0f0f10;
